--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -28,7 +28,12 @@
     text-decoration: none;
 }
 
-
+.white{
+    color: white; 
+}
+.background{
+    background-color: #0B66A2;   
+}
 
 .table {
     font-size: 16px;
