--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -42,6 +42,7 @@
 }
 .table {
     font-size: 16px;
+    font-family: 'Ubuntu', sans-serif
 }
 
 .table th {
@@ -54,6 +55,7 @@
     padding: 0;
     margin: 0;
     color: #0a4275;
+    
 }
 .color-blue{
     color: #0a4275;
@@ -62,6 +64,25 @@
     font-family: 'Ubuntu', sans-serif
 }
 .border-blue{
-    border: 2px solid #0a4275;
+    border: 1px solid #0a4275;
     border-radius: 10px;
 }
+
+@media only screen and (max-width: 767px) {
+    .col-lg-2 {
+      display: none;
+    }
+    .col-lg-10 {
+      width: 100%;
+      margin-top: 10px;
+      padding-left: 15px;
+    }
+    .some-text {
+      margin-bottom: 0px;
+    }
+    .row.ml-5 {
+      margin-left: 0px;
+    }
+  }
+/* 
+@media only screen and (min-width: 768px) */
